# FFuzz

./: README.md
afl-ffuzz/: Makefile  afl-fuzz.c  afl-parrel-qemu.c  afl-parrel-qemu.h  cleanEnv.sh  config.h  s2earg.config
afl-ffuzz/qemu_mode/: build_qemu_support.sh
s2e-ffuzz/: .swp  Dockerfile  Makefile  S2E-LICENSE  config-remote-make.sh.sample  make-remotely.sh  s2e.config  s2e.doxygen  s2e.files  s2e.includes  s2e.refresh_project.py  update-license.py
s2e-ffuzz/cmake/: LLVMBitcode.cmake
s2e-ffuzz/cs-svc/: README  cs-svc.py
s2e-ffuzz/docs/: BuildingS2E.html  BuildingS2E.rst  BuildingS2EManually.html  DebuggingS2E.html  DebuggingS2E.rst  ExternalSolvers.html  ExternalSolvers.rst  PciPassthrough.html  PciPassthrough.rst  ProfilingS2E.html  ProfilingS2E.rst  StateMerging.html  StateMerging.rst  TestingMinimalProgram.html  TestingMinimalProgram.rst  TestingS2E.html  TestingS2E.rst  index.html  index.rst
s2e-ffuzz/guest/: Makefile  configure
s2e-ffuzz/klee/: CMakeLists.txt
s2e-ffuzz/libs2e/: Makefile  Makefile.target  README.md  configure  libs2e.c  mapfile  s2e  s2e-kvm-interface.c  s2e-kvm-interface.h  s2e-kvm-qemu-stubs.c  s2e-kvm-trace.c  s2e-qemu-interface.c  test.c
s2e-ffuzz/libs2e/libcoroutine/src/: CMakeLists.txt  coroutine-int.h  coroutine-ucontext.c  coroutine.c
s2e-ffuzz/libs2e/libcpu/: CMakeLists.txt
s2e-ffuzz/libs2e/libcpu/include/: qemu-compiler.h  qemu-log.h  qemu-timer.h
s2e-ffuzz/libs2e/libcpu/include/cpu/: apic.h  common.h  config.h  cpu-common.h  cpus.h  exec.h  interrupt.h  ioport.h  kvm.h  memory.h  se_qemu.h  se_qemu_config.h  softmmu_defs.h  tb.h  tlb.h  types.h
s2e-ffuzz/libs2e/libcpu/include/cpu/i386/: cpu.h  defs.h  helper.h
s2e-ffuzz/libs2e/libcpu/include/fpu/: softfloat-macros.h  softfloat-specialize.h  softfloat.h
s2e-ffuzz/libs2e/libcpu/src/: CMakeLists.txt  bswap.h  cpu-all.h  cpu-defs.h  cpu-exec.c  cpus.c  def-helper.h  dyngen-exec.h  exec-all.h  exec-bp.c  exec-log.c  exec-memdbg.c  exec-phys.c  exec-phys.h  exec-phystb.c  exec-phystb.h  exec-ram.c  exec-ram.h  exec-tb.c  exec-tb.h  exec-tlb.c  exec-tlb.h  exec.c  exec.h  host-utils.c  host-utils.h  ioport.c  memory.c  osdep.h  qemu-common.h  qemu-lock.h  qemu-timer.c  softmmu_exec.h  softmmu_header.h  softmmu_template.h  translate-all.c
s2e-ffuzz/libs2e/libcpu/src/fpu/: softfloat.c
s2e-ffuzz/libs2e/libcpu/src/target-i386/: cpu.h  cpuid.c  helper.c  helper.h  op_helper.c  translate.c
s2e-ffuzz/libs2e/libq/src/: CMakeLists.txt  json-lexer.c  json-parser.c  json-streamer.c  q.h  qbool.c  qdict.c  qfloat.c  qint.c  qjson.c  qlist.c  qstring.c
s2e-ffuzz/libs2e/libse/src/: CMakeLists.txt  Slab.cpp  x64.asm
s2e-ffuzz/libs2e/libtcg/src/: CMakeLists.txt  optimize.c  tcg-internal.h  tcg-llvm.cpp  tcg.c
s2e-ffuzz/libs2e/libtcg/src/i386/: tcg-target.c
s2e-ffuzz/libvmi/: CMakeLists.txt  README  VMIConfig.cmake.in
s2e-ffuzz/libvmi/src/: BFDFile.cpp  CGCFile.cpp  CMakeLists.txt  ElfDwarf.cpp  ExecutableFile.cpp  FileProvider.cpp  PEFile.cpp  Vmi.cpp  WinKernDumpFile.cpp  WindowsCrashDumpGenerator.cpp  crashdump.cpp  dump.cpp  injector.cpp  pdb.cpp  reader.cpp  vmidemo.cpp
s2e-ffuzz/qemu/: Makefile  Makefile.objs  Makefile.target  arch_init.c  block.c  blockdev.c  compiler.h  configure  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  cpus.c  cpus.h  dma.h  (+43 more)
s2e-ffuzz/testsuite/autoconf/: AutoRegen.sh  aclocal.m4  configure.ac
s2e-ffuzz/tools/: CMakeLists.txt
s2e-ffuzz/tools/include/BitcodeLibrary/: Runtime.h
s2e-ffuzz/tools/include/CFG/: BinaryCFG.h  Graph.h
s2e-ffuzz/tools/include/Translator/: Translator.h  TranslatorInternal.h  TranslatorWrapperInternal.h
s2e-ffuzz/tools/lib/: CMakeLists.txt
s2e-ffuzz/tools/lib/BinaryReaders/: BFDInterface.cpp  BFDInterface.h  Binary.cpp  Binary.h  CMakeLists.txt  ExecutableFile.cpp  ExecutableFile.h  Library.cpp  Library.h  Macho.cpp  Macho.h  Pe.cpp  Pe.h  TextModule.cpp  TextModule.h
s2e-ffuzz/tools/lib/CFG/: BinaryCFG.cpp  CMakeLists.txt
s2e-ffuzz/tools/lib/ExecutionTracer/: CMakeLists.txt  CacheProfiler.cpp  CacheProfiler.h  LogParser.h  ModuleParser.cpp  PageFault.cpp  PageFault.h  PathBuilder.cpp
s2e-ffuzz/tools/lib/Utils/: BasicBlockListParser.cpp  BasicBlockListParser.h  BinaryCFGReader.cpp  BinaryCFGReader.h  CMakeLists.txt  Log.cpp  Log.h  Utils.h
s2e-ffuzz/tools/lib/Utils/Signals/: fsigc++.h
s2e-ffuzz/tools/lib/X8664BitcodeLibrary/: CMakeLists.txt  config-target.h
s2e-ffuzz/tools/lib/X8664Translator/: CMakeLists.txt  Translator.cpp  Translator.h
s2e-ffuzz/tools/lib/X86BitcodeLibrary/: BitcodeLibrary.cpp  CMakeLists.txt  config-target.h
s2e-ffuzz/tools/lib/X86RuntimeLibrary/: CMakeLists.txt  LibraryFunctionDetector.c  LibraryFunctionDetector.h  OutputFunctionTests.c  Runtime.cpp  StringFunctionTests.c
s2e-ffuzz/tools/lib/X86Translator/: CMakeLists.txt  TranslatorWrapper.cpp  TranslatorWrapper.h  config-host.h  config-target.h
s2e-ffuzz/tools/tools/: CMakeLists.txt
s2e-ffuzz/tools/tools/analysis/: Analysis.cpp  CMakeLists.txt
s2e-ffuzz/tools/tools/cacheprof/: CMakeLists.txt  cacheprof.cpp
s2e-ffuzz/tools/tools/coverage/: CMakeLists.txt  Coverage.cpp  Coverage.h
s2e-ffuzz/tools/tools/debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h
s2e-ffuzz/tools/tools/forkprofiler/: CMakeLists.txt  forkprofiler.cpp  forkprofiler.h
s2e-ffuzz/tools/tools/hardening/: CMakeLists.txt  Hardening.cpp  Hardening.h
s2e-ffuzz/tools/tools/icounter/: CMakeLists.txt  icounter.cpp  icounter.h
s2e-ffuzz/tools/tools/lcoverage/: CMakeLists.txt  Coverage.cpp  Coverage.h
s2e-ffuzz/tools/tools/pfprofiler/: CMakeLists.txt  CacheProfiler.cpp  CacheProfiler.h  pfprofiler.cpp  pfprofiler.h
s2e-ffuzz/tools/tools/revgen32/: CMakeLists.txt
s2e-ffuzz/tools/tools/revgen64/: CMakeLists.txt  InstructionLabeling.cpp  InstructionLabeling.h  MemoryWrapperElimination.cpp  MemoryWrapperElimination.h  RegisterPromotion.cpp  RegisterPromotion.h  RevGen.cpp  RevGen.h
s2e-ffuzz/tools/tools/scripts/: CMakeLists.txt  forkprofile.sh  gdb.ini  gdb.py
s2e-ffuzz/tools/tools/tbtrace/: CMakeLists.txt  TbTrace.cpp  TbTrace.h
(+723 files in other folders)
